--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shitty-tech-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://scorpionknifes.github.io/tech-test-example/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,6 +12,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.0",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -18,6 +20,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
